--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,8 @@
-# Node.js with React
-# Build a Node.js project that uses React.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  name: sadaf-agent-pool
 
 steps:
 - task: NodeTool@0
